--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,12 @@ header h1 {
 .daily-value p:not(.no-divider) {
     border-bottom:1px solid #888989;
 }
+.dbl-indent {
+    margin-left: 2em;
+}
+.note {
+    font-size: 0.6rem;
+    margin: 5 0;
+    padding: 0 8px;
+    text-indent: -8px;
+}
