--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body {
     font-family: Open Sans, sans-serif;
 }
+html {
+    font-size: 16px;
+}
 
 .label {
     border: 2px solid black;
@@ -15,6 +18,9 @@ header h1 {
     text-align: center;
     margin: -4px 0;
     letter-spacing: 0.15px;
+}
+p {
+    margin: 0;
 }
 
 .divider {
